--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ body {
   padding: 2em;
   padding-top: 4em;
   padding-left: 5em;
+  position: relative;
 }
 
 @media screen and (max-width: 768px) {
@@ -156,13 +157,4 @@ h1 span {
 
 .about-text {
   max-width: 600px;
-}
-
-.snowflake {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background: white;
-  border-radius: 50%;
-  filter: blur(1px);
 }
