--- a/main.css
+++ b/main.css
@@ -158,3 +158,12 @@ h1 span {
 .about-text {
   max-width: 600px;
 }
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Ensure the canvas is behind the content */
+}
