added the blog 3

--- a/posts/post.css
+++ b/posts/post.css
@@ -75,15 +75,18 @@ body {
 
 .breadcrumbs {
   color: #7460E0;
+  padding: 0px;
 }
 
 .breadcrumbs a {
   color: #7460E0;
   text-decoration: none;
+  padding: 0px;
 }
 
 .breadcrumbs a:hover {
   color: #ffffff;
+  padding: 0px;
 }
 
 
